--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
+    "react-native-slider": "^0.11.0",
     "react-navigation": "^1.0.0-beta.13"
   }
 }
